--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Lead Technology Support</a> <span>2019-2020</span></h2>
+					                  <h2><a href="#">Lead Technology Support (OYO Rooms)</a> <span>2019-2020</span></h2>
 					                  <p>Work on development and maintenance of coding projects, primarily in web technologies and Java based projects. <br>Worked on Monolithic and Microservises architectures and improving performance in deployment of applications. <br>Work on different database services (AWS RDS - PostgreSQL, MongoDB, Elastic search) <br>Read and understand project documentation and complex application code and make code fixes to resolve the problems face by end user.</p>
 					               </div>
 					            </div>
